# open-claude-cowork

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  NODE_VERSION_ISSUE.md  README.md  TAURI_2_UPGRADE.md  TAURI_MIGRATION_PLAN.md  TAURI_MIGRATION_STATUS.md  biome.json  builder.js  nodemon.json  package-lock.json  package.json  plopfile.js  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  test-client.ts  tsconfig.json  vitest.config.ts
.github/workflows/: build.yml
.trae/documents/: Build ACP Agent Client.md  Implement Pre-configured Agent Selection & Configuration Flow.md  Refactor Agent Configuration to Plugin System.md  设计并实现基于文件夹的工作空间用户动线.md  重构设置界面布局.md
builder/: paths.ts  rsbuild.common.ts  rsbuild.main.ts  rsbuild.render.ts
docs/: acp-implementation-improvements.md  acp-protocol-capabilities.md  claude-sdk-provider-design.md  plan.md  refactoring-summary.md
env/: .env  .env.darwin  .env.example  .env.linux  .env.local  .env.win32
mas/: entitlements.mas.plist
scripts/: download-node.js  fetch-bun.cjs  verify-sidecar.sh
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/binaries/: node-sidecar.js
src-tauri/src/: main.rs
src/main/: index.ts  preload.ts
src/render/: App.css  App.tsx  AppNew.tsx  EnvironmentSetup.css  EnvironmentSetup.tsx  NewTaskModal.tsx  SettingsModal-back.tsx  SettingsModal.tsx  WorkspaceWelcome.tsx  env.d.ts  index.tsx  tailwind.css  theme.css  types.ts
src/sidecar/: handlers.ts  index.ts  server.ts
src/types/: acpTypes.ts  agentTypes.ts  checkpointTypes.ts  (+1 more)
test-agent/: index.ts
(+93 files in other folders)
