[package]
name = "open-claude-cowork"
version = "0.2.0"
description = "Open Claude Cowork"
authors = ["madinah"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
